kelas istio/02. Traffic management/f. load balancing/review/review-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: review-vs
  namespace: default
spec:
  hosts:
  - review.default.svc.cluster.local
  http:
  - name: "route review"
    route:
    - destination:
        host: review.default.svc.cluster.local
